BUGFIX: Align datepicker next month icon

--- a/Resources/Private/Styles/styles.scss
+++ b/Resources/Private/Styles/styles.scss
@@ -81,6 +81,10 @@ $datepicker__header-color: white;
         &:hover {
           background-color: transparent;
         }
+
+        &--next--with-time {
+          right: 10px;
+        }
       }
 
       &__day {
